cluster/base/youtrack/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: youtrack
  namespace: youtrack
spec:
  type: ClusterIP
  selector:
    app: youtrack
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
